objects/copado__User_Story__c.object
<CustomObject>
    <fields>
        <fullName>copado__US_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__User_Story_Title__c</fullName>
        <description>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</description>
        <inlineHelpText>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</inlineHelpText>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
        <formula>HYPERLINK(
	IF(
		AND(
			NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		&apos;&apos;
	),
	&apos;feature/&apos; + Name
)</formula>
        <inlineHelpText>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Promote_Change__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Epic__c</columns>
        <columns>copado__Sprint__c</columns>
        <columns>copado__Release__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>copado__Cli_Listview</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Cli Listview</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <recordTypes>
        <fullName>copado__Bug</fullName>
        <active>true</active>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__User_Story</fullName>
        <active>true</active>
        <label>User Story</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Utility</fullName>
        <active>true</active>
        <label>Utility</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Pull_Request_Approved</fullName>
        <active>false</active>
        <description>This enforces that a pull request for this User Story must first be approved before the User Story can be marked as &quot;Promote Change&quot; or &quot;Promote &amp; Deploy&quot;. The checkbox Pull Request Approved must equal true,</description>
        <errorConditionFormula>AND( 
OR( 
AND( 
PRIORVALUE(copado__Promote_Change__c) = false, 
copado__Promote_Change__c = true 
), 
AND( 
PRIORVALUE(copado__Promote_and_Deploy__c) = false, 
copado__Promote_and_Deploy__c = true 
) 
), 
 copado__Pull_Requests_Approved__c = false
)</errorConditionFormula>
        <errorMessage>A pull request must first be approved in order to promote this User Story.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Static_Code_Analysis_Results</fullName>
        <active>false</active>
        <description>This enforces any sort of conditions you may want on the Static Code Analysis results of a User Story (i.e. whether they have to be run and/or achieve certain results). What is written here is that the SCA Score cannot be blank or greater than zero.</description>
        <errorConditionFormula>AND(
copado__Has_Apex_Code__c = true,
OR( 
AND( 
PRIORVALUE(copado__Promote_Change__c) = false, 
copado__Promote_Change__c = true 
), 
AND( 
PRIORVALUE(copado__Promote_and_Deploy__c) = false, 
copado__Promote_and_Deploy__c = true 
) 
), 
OR( 
ISBLANK( SCA_Score__c ), 
SCA_Score__c &gt; 0 
) 
)</errorConditionFormula>
        <errorMessage>Static Code Analysis has either not been run or the SCA Score is too high.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Cancellation_reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  TEXT(copado__Status__c)==&quot;Cancelled&quot;,
  ISBLANK(copado__Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Cancellation_Reason__c</errorDisplayField>
        <errorMessage>A cancellation reason must be given.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Promote_User_Story_Apex_validation</fullName>
        <active>true</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Test_scratch_orgs_cannot_be_used_for_dev</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(copado__Org_Credential__r.copado__Org_Type__c) == &apos;Scratch Org - Test only&apos;</errorConditionFormula>
        <errorDisplayField>copado__Org_Credential__c</errorDisplayField>
        <errorMessage>Test scratch orgs cannot be used for developments</errorMessage>
    </validationRules>
</CustomObject>